# bevy-open-siege

./: .gitignore  ART_ASSETS.md  BUILD_PROVENANCE.md  CONTENT_RATING.md  CREDITS.md  Cargo.toml  LICENSE  PRESSKIT.md  PRIVACY.md  QA_SIGNOFF.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  STORE_PAGE.md  STORE_SCREENSHOTS.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  VERSION.ron  flake.nix
.github/workflows/: deploy-pages.yml
assets/: manifest.ron
assets/data/: levels.ron
assets/fonts/: LICENSE-Sarasa.md
assets/i18n/: en.ron  zh.ron
assets/linux/: bevy-open-siege.desktop  io.github.bevy_open_siege.BevyOpenSiege.metainfo.xml
assets/models/monsters/: brute.glb  buckethead.glb  conehead.glb  digger.glb  frostbite.glb  (+5 more)
scripts/: audio_smoke.sh  content_rating_audit.sh  create_candidate_evidence.sh  create_store_submission_pack.sh  final_signoff_check.sh  generate_3d_models.py  generate_release_manifest.py  generate_third_party_licenses.py  install_linux_user.sh  linux_clean_distro_smoke.sh  linux_dependency_audit.sh  linux_install_smoke.sh  linux_metadata_audit.sh  linux_package_audit.sh  linux_portability_smoke.sh  manual_qa_observations.sh  manual_qa_session.sh  package_macos.sh  package_release.sh  package_windows.ps1  platform_package_plan.sh  qa_evidence_summary.sh  qa_signoff_prepare.sh  release_check.sh  runtime_smoke.sh  signoff_bundle.sh  smoke_release_archive.sh  store_asset_audit.sh  store_screenshot_check.sh  support_diagnostics.sh  uninstall_linux_user.sh  verify_release.sh  visual_smoke.sh
src/: main.rs
web/: index.html
(+10 files in other folders)
