[package]
name = "bevy_open_siege"
version = "0.1.0"
edition = "2024"

[features]
# Web-only: switch the wasm build from WebGL2 to WebGPU (bevy allows one per binary).
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "async_executor",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_window",
    "default_font",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "std",
    "tonemapping_luts",
    "wayland",
    "x11",
    "zstd_rust",
] }
rand = "0.9"
ron = "0.12"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.20.1", default-features = false, features = ["wav"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["webgl2"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.web-release]
inherits = "release"
opt-level = "s"
lto = "thin"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
